# ghost3dzip

./: CMakeLists.txt  README.md
3dzip/: .bzrignore  CMakeLists.txt
3dzip/.bzr/branch/: branch.conf  last-revision  tags
3dzip/.bzr/checkout/: dirstate  merge-hashes
3dzip/.bzr/repository/: pack-names
3dzip/.bzrmeta/: externals  externals-snapshot
3dzip/3dz-debug/: 3dz-debug.cpp  CMakeLists.txt  MainWindow.cpp  MainWindow.hpp  MainWindow.ui
3dzip/3dzip/: 3dzip.pc.in  AIMesh.hh  AOMesh.hh  ActiveList.cc  ActiveList.hh  ActiveStack.cc  ActiveStack.hh  ArCode.cc  ArCode.hh  BitStream.cc  BitStream.hh  CMakeLists.txt  Compressor.cc  Compressor.hh  CompressorFacade.cc  CompressorFacade.hh  ManifoldCompressorFacade.cc  ManifoldCompressorFacade.hh  ManifoldUncompressorFacade.cc  ManifoldUncompressorFacade.hh  Mesh.cc  Mesh.hh  Predictor.hh  Property.hh  RangeCod.cc  Reader.cc  Reader.hh  StaticModel.cc  StitchSymbol.hh  Symbol.cc  Symbol.hh  Uncompressor.cc  Uncompressor.hh  UncompressorFacade.cc  UncompressorFacade.hh  VBE.hh  Writer.cc  Writer.hh  log2upper.hh
3dzip/3dzip/ArCode/: AdaptiveModel.hh  MoffatModel.hh  RangeCod.hh  StaticModel.hh  port.h
3dzip/3dzip/action/in/: Arithmetic.hh  AttribArithmetic.hh  AttribRange.hh  ImmediateBitStream.hh  Range.hh  StitchArithmetic.hh  StitchRange.hh  SymbolArithmetic.hh  SymbolGeneric.hh  SymbolRange.hh
3dzip/doc/: Doxyfile
3dzip/libhds/: .bzrignore  CMakeLists.txt
3dzip/libhds/.bzr/branch/: branch.conf  last-revision
3dzip/libhds/.bzr/checkout/: dirstate
3dzip/libhds/.bzr/repository/: pack-names
3dzip/libhds/doc/: Doxyfile
3dzip/libhds/hds/: CMakeLists.txt  Edge.hh  HDS.cc  HDS.hh  HalfEdge.hh  OBJ.cc  OBJ.hh  OFF.cc  OFF.hh  QVertexAttrib.hh  Vertex.hh  all.hh  halfedge.h  hds.pc.in  io.cc  io.hh
3dzip/test/: CMakeLists.txt  Drawable.hpp  GLViewer.cpp  GLViewer.hpp  MainWindow.cpp  MainWindow.hpp  Scene.cpp  Scene.hpp  all.hpp  main.cpp  ply_reader.hpp
3dzip/test2/: CMakeLists.txt  GLViewer.cpp  GLViewer.hpp  GLWidget.cpp  GLWidget.hpp  Main.ui  MainWindow.cpp  MainWindow.hpp  Scene.cpp  Scene.hpp  all.hpp  main.cpp
CMakeModules/: FindQGLViewer.cmake
src/: CMakeLists.txt  decoder.cpp  decoder.h  eigensolver.cpp  eigensolver.cu  eigensolver.h  encoder.cpp  encoder.h  gui.cpp  gui.h  gui.ui  main.cpp  metispart.cpp  metispart.h  metispartition.h  utils.cpp  utils.h
src/metis/: CMakeLists.txt  README  kmetis.c  kmetis.c.~1~  kvmetis.c  kvmetis.c.~1~  mkmetis.c  ometis.c.~1~  pmetis.c.~1~  proto.h  proto.h.~1~  rename.h  util.c
