cmake_minimum_required(VERSION 2.8)
project(3DZIP)
find_package(Boost)
include_directories(${Boost_INCLUDE_DIRS})
find_package(PkgConfig)
if (PKG_CONFIG_FOUND)
    pkg_check_modules(EIGEN2 REQUIRED eigen2)
    include_directories(${EIGEN2_INCLUDE_DIRS})
endif()
include_directories(${3DZIP_SOURCE_DIR})
include_directories(${HDS_SOURCE_DIR})
add_subdirectory(libhds)
add_subdirectory(3dzip)
add_subdirectory(bin)

if (IS_DIRECTORY ${3DZIP_SOURCE_DIR}/ply-0.1)
    add_subdirectory(ply-0.1)
    set(HAVE_PLY TRUE)
    set(PLY_LIBRARY ply)
endif()

option(3DZIP_BUILD_GUI_APPLICATIONS "Enable the compilation of the Qt example
applications" false)
if (3DZIP_BUILD_GUI_APPLICATIONS)
    find_package(Qt4 COMPONENTS QtCore QtGui QtOpenGL)
    find_package(OpenGL)
    find_library(GLEW_LIBRARY NAMES GLEW glew32)
    find_path(GLEW_INCLUDE_DIR NAMES GL/glew.h)
    include_directories(${GLEW_INCLUDE_DIR})
endif()
if (3DZIP_BUILD_GUI_APPLICATIONS AND QT_QTOPENGL_FOUND AND OPENGL_GLU_FOUND AND GLEW_LIBRARY)
    include(${QT_USE_FILE})
    set(GUI_LIBRARIES ${QT_LIBRARIES} ${OPENGL_gl_LIBRARY} ${OPENGL_glu_LIBRARY}
	${GLEW_LIBRARY})
    add_subdirectory(test)
    add_subdirectory(test2)
    add_subdirectory(3dz-debug)
endif()
